Fix transform animation glitch with backface-visibility hidden

--- a/css/style.css
+++ b/css/style.css
@@ -308,7 +308,8 @@ body {
     font-size: 2rem;
     text-align: center;
     opacity: 0;
-    transition: all .5s; }
+    transition: all .5s;
+    backface-visibility: hidden; }
   .story:hover .story__caption {
     opacity: 1;
     transform: translate(-50%, -50%); }
