--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -39,6 +39,7 @@
     text-align: center;
     opacity: 0;
     transition: all .5s;
+    backface-visibility: hidden;
   }
 
   &:hover &__caption { //When hovering story container, the caption should change
